keycloak/keycloak.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: keycloak
  labels:
    app.kubernetes.io/name: keycloak
    app.kubernetes.io/component: server
  annotations:
    nginx.ingress.kubernetes.io/proxy-buffer-size: "64k"
spec:
  rules:
  - host: keycloak.example.com
    http:
      paths:
      - backend:
          serviceName: keycloak
          servicePort: http
  tls:
  - secretName: keycloak-tls
    hosts:
    - keycloak.example.com

---
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  labels:
    app.kubernetes.io/name: keycloak
    app.kubernetes.io/component: server
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/name: keycloak
    app.kubernetes.io/component: server

# ---
# apiVersion: v1
# kind: Secret
# metadata:
#   name: keycloak-admin-user
#   labels:
#     app.kubernetes.io/name: keycloak
#     app.kubernetes.io/component: server
# type: Opaque
# data:
#   # password for admin web-interface user `keycloak`:
#   # kubectl -n "$namespace" create secret generic keycloak-admin-user \
#   #   --from-literal=password=$(openssl rand -base64 32 | tr -d "\n" | base64) --dry-run -o yaml
#   password: ""

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: keycloak
  namespace: keycloak
  labels:
    app.kubernetes.io/name: keycloak
    app.kubernetes.io/component: server
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: keycloak
      app.kubernetes.io/component: server
  serviceName: keycloak
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: keycloak
        app.kubernetes.io/component: server
    spec:
      containers:
      - name: keycloak
        image: jboss/keycloak:6.0.1
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /auth/
            port: http
            scheme: HTTP
          initialDelaySeconds: 120
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /auth/
            port: http
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
      restartPolicy: Always
      securityContext:
        fsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
      terminationGracePeriodSeconds: 60
  volumeClaimTemplates: []
